Small note about downloadables
git-svn-id: http://hardmock.rubyforge.org/svn/trunk@5 48d1a0da-1ed6-4f58-8415-457aad5d95da

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -51,6 +51,7 @@
 			<p>
 				<pre>$ script/plugin install svn://rubyforge.org/var/svn/hardmock/tags/hardmock</pre>
 			</p>
+			<p>(Also available on Rubyforge as Gem, Tgz and Zip)</p>
 
 			<h3>Use</h3>
 			<p align="center">
