Rebranding to AO
git-svn-id: http://hardmock.rubyforge.org/svn/trunk@59 48d1a0da-1ed6-4f58-8415-457aad5d95da

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -41,11 +41,21 @@
 			{
 				border: none;
 			}
+
+      #copyright 
+      {
+        font-size: 80%;
+        color: gray;
+        font-style: italic;
+        text-align: right;
+        vertical-align: middle;
+      }
 		</style>
 	</head>
 	<body>
 		<div id="content">
       <div class="title"><span class="big">Hardmock =></span> Strict, ordered mock objects.</div>
+      <div id="copyright">by crosby at atomicobject.com, (c) 2006,2007 <a href="http://atomicobject.com">Atomic Object LLC <img border="0" width="24" height="24" src="logo-trans-64.png"/></a></div>
 
 			<h3>Install</h3>
 			<p>
