Updated the plugin installation snippet
git-svn-id: http://hardmock.rubyforge.org/svn/trunk@70 48d1a0da-1ed6-4f58-8415-457aad5d95da

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -25,7 +25,7 @@
 <img border=0 src="page_header.png" usemap="#GraffleExport">
 
 
-      <div id="rails_plugin_installation">$ script/plugin install svn://rubyforge.org/var/svn/hardmock/tags/hardmock</div>
+      <div id="rails_plugin_installation">$ script/plugin install http://hardmock.rubyforge.org/svn/tags/hardmock</div>
 
       <a href="doc/index.html"><img border=0 src="sample_code.png"></a>
     </div>
