--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-	<title>atomicobject/hardmock @ GitHub</title>
+	<title>atomicobject/hardmock @ GitHub (crozified)</title>
 	
 	<style type="text/css">
 		body {
