--- a/page_header.html
+++ b/page_header.html
@@ -1,10 +1,10 @@
 <map name="GraffleExport">
-	<area shape=rect coords="50,169,274,190" href="http://gemcutter.org/gems/hardmock">
-	<area shape=rect coords="25,131,299,198" href="http://gemcutter.org/gems/hardmock">
+	<area shape=rect coords="50,169,274,190" href="http://rubygems.org/gems/hardmock">
+	<area shape=rect coords="25,131,299,198" href="http://rubygems.org/gems/hardmock">
 	<area shape=rect coords="471,102,646,120" href="http://atomicobject.github.com/">
-	<area shape=rect coords="496,131,646,198" href="http://rdoc.info/projects/atomicobject/hardmock">
+	<area shape=rect coords="496,131,646,198" href="http://rubydoc.info/gems/hardmock/1.3.7/frames">
 	<area shape=rect coords="321,131,475,198" href="http://github.com/atomicobject/hardmock">
-	<area shape=rect coords="25,102,218,120" href="http://atomicobject.com">
+	<area shape=rect coords="26,102,217,120" href="http://atomicobject.com">
 	<area shape=rect coords="583,28,638,83" href="http://atomicobject.github.com/">
 	<area shape=rect coords="33,25,94,86" href="http://atomicobject.com">
 </map>
